--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							</ul> -->
+								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+								<li><a href="https://chenkaizhu.github.io/assets/Chenkai%20resume.pdf" class="far fa-file"><span class="label">Resume</span></a></li>
+							</ul>
+							<a href="https://chenkaizhu.github.io/assets/Chenkai%20resume.pdf" target="_blank">Resume</a>
 						</nav>
 					</header>
 
